# janken-rust

./: ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000000_add_player_stats.sql
backend/src/: game.rs  handlers.rs  main.rs  state.rs
frontend/: Cargo.toml  Dockerfile  index.html  styles.css
frontend/src/: game_state.rs  lib.rs  websocket.rs
frontend/src/components/: landing_page.rs  leaderboard.rs  mod.rs  player_details.rs
shared/: Cargo.toml
shared/src/: lib.rs
