[workspace]
members = [
    "frontend",
    "backend",
    "shared"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"