[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Event",
    "MouseEvent",
    "KeyboardEvent"
] }
js-sys = "0.3"
gloo = { version = "0.8", features = ["storage", "timers"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, version = "1.6", features = ["v4", "js", "serde"] }
chrono = { workspace = true }
thiserror = { workspace = true }
trunk = { version = "0.16", optional = true }
wasm-logger = "0.2"
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["trunk"]